tests/errors/imports/invalidImport.d.ts
import { ImportableFoo } from "../../importables/importables";

type MyType = {
  foo: ImportableFoo;
};
